[package]
name = "imgal_python"
version = "0.1.1"
authors = ["Edward Evans"]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/imgal-sc/imgal"
readme = "README.md"

[lib]
name = "imgal"
crate-type = ["cdylib"]
doc = false

[dependencies]
imgal = { path = "../imgal" }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25.0"
