[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "imgal"
version = "0.1.0.dev0"
description = "A fast and open-source scientific image processing and algorithm library."
authors = [{ name = "Edward Evans", email = "elevans2@wisc.edu" }]
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "maturin>=1.8.3",
]

